# splat

./: .gitignore  .travis.yml  CHANGES  CMakeLists.txt  README  README.rst  build  clean  configure  dem.cpp  dem.h  install  itwom3.0.cpp  itwom3.0.h  main.cpp  path.h  splat.cpp  splat.h
doc/english/: CMakeLists.txt
doc/spanish/: CMakeLists.txt
docs/: clean  docmaker
docs/english/man/: splat.1
docs/english/postscript/: splat.ps
docs/spanish/man/: splat.1
docs/spanish/postscript/: splat.ps
docs/spanish/text/: splat.txt
src/: CMakeLists.txt
src/splat/: CMakeLists.txt  anf.cpp  anf.h  boundary_file.cpp  boundary_file.h  city_file.cpp  city_file.h  dem.cpp  dem.h  elevation_map.cpp  elevation_map.h  fontdata.h  gnuplot.cpp  gnuplot.h  itwom3.0.cpp  itwom3.0.h  kml.cpp  kml.h  lrp.cpp  lrp.h  main.cpp  pat_file.cpp  pat_file.h  path.cpp  path.h  ppm.cpp  ppm.h  region.cpp  region.h  report.cpp  report.h  sdf.cpp  sdf.h  site.cpp  site.h  splat.h  splat_run.cpp  splat_run.h  udt.cpp  udt.h  (+2 more)
src/utils/: CMakeLists.txt  README  README.rst
tests/: oyster.qth  test.py  wnye.lrp  wnye.qth
